2006-04-03  David Reveman  <davidr@novell.com>

	* hw/xgl/Makefile.am (Xgl_LDADD): Static objects before dynamic
	objects (Hanno Boeck).

2006-03-31  David Reveman  <davidr@novell.com>

	* render/render.c (ProcRenderQueryPictFormats): Do not return YUV
	formats.

2006-03-30  David Reveman  <davidr@novell.com>

	* hw/xgl/glx/xglx.c: Move XOpenDisplay and GLX initialization
	to OsVendorInit so that it is done before xgl server sockets are
	created.

2006-03-28  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/module/Makefile.am:
	* hw/xgl/xglglx.c (xglLoadGLXModules): Changed GLX module name
	from libglx to libglxext to avoid conflicts.

2006-03-21  David Reveman  <davidr@novell.com>

	* configure.ac: xglx requires xkbfile.

	* include/xgl-config.h.in: Include xkb-config.h.

	* hw/xgl/glx/xglx.c: Get default XKB options from X server.

2006-03-20  David Reveman  <davidr@novell.com>

	* hw/xgl/xglinit.c: Add workaround for xgl being unresponsive on
	nvidia's driver when something that consumes a lot of CPU is running
	in the background.

	* hw/xgl/glxext/xglglxext.c: Update for rendering to FBOs. Adjust
	clipping and draw/read offsets when FBO is bound. Lookup texture and
	renderbuffer objects when attaching. Fix
	GetFramebufferAttachmentParameterivEXT.

2006-03-15  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxlog.c:
	Add missing log functions for GL_ARB_vertex_program.

	* hw/xgl/glxext/xglglxext.c: Sync with mesa head.

	* GL/mesa/X/xf86glx.c (init_screen_visuals): Pass the correct visual
	to XMesaCreateVisual.
	(__glXMesaDrawableDestroy): Only try to destroy mesa buffer if it has
	been created.
	(__glXMesaContextDestroy):
	(__glXMesaContextLoseCurrent): Flush context cache appropriately.
	(__glXMesaContextForceCurrent): Set dispatch table.

2006-03-13  Matthias Hopf  <mhopf@suse.de>

	* GL/mesa/Makefile.am:
	* configure.ac:
	Real fix for glapi: Remove Makefile generation, don't distribute.

2006-03-13  David Reveman  <davidr@novell.com>
