@@ -1,3 +1,8 @@
+2006-04-04  David Reveman  <davidr@novell.com>
+
+	* hw/xgl/glx/xglx.c (xglxScreenInit): Re-install colormap
+	after initializing software cursor (#6489). (Tiago Vignatti)
+
 2006-04-03  David Reveman  <davidr@novell.com>
 
 	* hw/xgl/Makefile.am (Xgl_LDADD): Static objects before dynamic
